@@ -75,12 +75,12 @@
 static void up_calibratedelay(void)
 {
   int i;
-  lldbg("Beginning 100s delay\n");
+  slldbg("Beginning 100s delay\n");
   for (i = 0; i < 100; i++)
     {
       up_mdelay(1000);
     }
-  lldbg("End 100s delay\n");
+  slldbg("End 100s delay\n");
 }
 #else
 # define up_calibratedelay()
