@@ -76,7 +76,7 @@ void up_release_pending(void)
 {
   _TCB *rtcb = (_TCB*)g_readytorun.head;
 
-  lldbg("From TCB=%p\n", rtcb);
+  slldbg("From TCB=%p\n", rtcb);
 
   /* Merge the g_pendingtasks list into the g_readytorun task list */
 
@@ -101,7 +101,7 @@ void up_release_pending(void)
            */
 
           rtcb = (_TCB*)g_readytorun.head;
-          lldbg("New Active Task TCB=%p\n", rtcb);
+          slldbg("New Active Task TCB=%p\n", rtcb);
 
           /* Then switch contexts */
 
@@ -121,7 +121,7 @@ void up_release_pending(void)
            */
 
           rtcb = (_TCB*)g_readytorun.head;
-          lldbg("New Active Task TCB=%p\n", rtcb);
+          slldbg("New Active Task TCB=%p\n", rtcb);
 
            /* Then switch contexts */
 
