@@ -99,7 +99,7 @@ void up_schedule_sigaction(_TCB *tcb, sig_deliver_t sigdeliver)
 {
   /* Refuse to handle nested signal actions */
 
-  dbg("tcb=0x%p sigdeliver=0x%p\n", tcb, sigdeliver);
+  sdbg("tcb=0x%p sigdeliver=0x%p\n", tcb, sigdeliver);
 
   if (!tcb->xcp.sigdeliver)
     {
@@ -113,7 +113,7 @@ void up_schedule_sigaction(_TCB *tcb, sig_deliver_t sigdeliver)
        * being delivered to the currently executing task.
        */
 
-      dbg("rtcb=0x%p current_regs=0x%p\n", g_readytorun.head, current_regs);
+      sdbg("rtcb=0x%p current_regs=0x%p\n", g_readytorun.head, current_regs);
 
       if (tcb == (_TCB*)g_readytorun.head)
         {
